[tool.poetry]
name = "mattergen"
version = "1.0"
description = "MatterGen Package"
# optional metadata fields you can fill in:
authors = ["Joonatan Laulainen"]
# license = "MIT"
# readme = "README.md"
# homepage = "https://github.com/yourname/mattergen"
# repository = "https://github.com/yourname/mattergen"

# Minimum Python requirement:
# (You can also do something like "^3.10" if you want to allow 3.10 up to 4.0)
# but ">=3.10" is valid as well.
# Poetry reads this under [tool.poetry.dependencies], so see below.

[tool.poetry.dependencies]
python = ">=3.12, <3.13"

# Regular dependencies:
ase = ">=3.22.1"
autopep8 = "*"
cachetools = "*"
contextlib2 = "*"
emmet-core = ">=0.84.2"
fire = "*"
hydra-core = "1.3.1"
hydra-joblib-launcher = "1.1.5"
jupyterlab = ">=4.2.5"
lmdb = "*"
matplotlib = "3.8.4"
matscipy = ">=0.7.0"
mattersim = ">=1.1"
monty = "2024.7.30"
notebook = ">=7.2.2"
numpy = "<2.0"
omegaconf = "2.3.0"
pymatgen = ">=2024.6.4"
pylint = "*"
pytest = "*"
pytorch-lightning = "2.0.6"
setuptools = "*"
SMACT = "*"
sympy = ">=1.11.1"
torch = "2.2.1"
torchvision = "0.17.1"
torchaudio = "2.2.1"
torch_geometric = ">=2.5"
tqdm = "*"
wandb = ">=0.10.33"

# Direct URL dependencies (formerly in [tool.uv.sources]):
pyg-lib = { url = "https://data.pyg.org/whl/torch-2.2.0%2Bcu121/pyg_lib-0.4.0%2Bpt22cu121-cp312-cp312-linux_x86_64.whl" }
torch_cluster = { url = "https://data.pyg.org/whl/torch-2.2.0%2Bcu121/torch_cluster-1.6.3%2Bpt22cu121-cp312-cp312-linux_x86_64.whl" }
torch_scatter = { url = "https://data.pyg.org/whl/torch-2.2.0%2Bcu121/torch_scatter-2.1.2%2Bpt22cu121-cp312-cp312-linux_x86_64.whl" }
torch_sparse = { url = "https://data.pyg.org/whl/torch-2.2.0%2Bcu121/torch_sparse-0.6.18%2Bpt22cu121-cp312-cp312-linux_x86_64.whl" }

[build-system]
# Poetry’s build system specification:
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

# ------------------
# Additional tool configs are left untouched:
# ------------------

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/

[tool.isort]
profile = "black"
line_length = 100
known_first_party = [
    "mattergen",
]

